--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,9 @@
     padding: 2em;
 }
 
-ul {
-    list-style-type: none;
+.logo {
+    float: left;
+    /*margin-top: 0.5em;
+    margin-right: 1em;*/
+    margin: 0.5em;
 }
